--- a/client/client-wasm/Cargo.toml
+++ b/client/client-wasm/Cargo.toml
@@ -1,6 +1,30 @@
 [package]
 name = "client-wasm"
 version = "0.1.0"
-edition = "2024"
+authors = ["nx0ly <n9d8sa@gmail.com>"]
+edition = "2018"
+
+[lib]
+crate-type = ["cdylib", "rlib"]
+
+[features]
+default = ["console_error_panic_hook"]
 
 [dependencies]
+wasm-bindgen = "0.2.84"
+bevy = { version = "0.14", features = ["webgl2"] }
+getrandom = { version = "0.3", default-features = false, features = ["wasm_js"] }
+uuid = { version = "1", default-features = false, features = ["js"] }
+
+# The `console_error_panic_hook` crate provides better debugging of panics by
+# logging them with `console.error`. This is great for development, but requires
+# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
+# code size when deploying.
+console_error_panic_hook = { version = "0.1.7", optional = true }
+
+[dev-dependencies]
+wasm-bindgen-test = "0.3.34"
+
+[profile.release]
+# Tell `rustc` to optimize for small code size.
+opt-level = "s"
