--- a/client/frontend/package.json
+++ b/client/frontend/package.json
@@ -17,6 +17,9 @@
     "@vue/tsconfig": "^0.8.1",
     "typescript": "~5.9.3",
     "vite": "npm:rolldown-vite@7.2.5",
+    "vite-plugin-top-level-await": "^1.6.0",
+    "vite-plugin-wasm": "^3.5.0",
+    "vite-plugin-wasm-pack": "^0.1.12",
     "vue-tsc": "^3.1.4"
   },
   "overrides": {
